# Lumino

lumino/: .gitignore  .pypas.toml  justfile  justfile.bak  pyproject.toml
lumino/accounts/: forms.py  signals.py  urls.py  views.py
lumino/accounts/static/css/: auth_form.css
lumino/accounts/templates/: auth_form.html  form.html
lumino/factories/: __init__.py  auth.py  extras.py  subjects.py  users.py
lumino/fixtures/: auth.json  subjects.json  users.json
lumino/main/: settings.py  urls.py
lumino/shared/: views.py
lumino/shared/static/css/: base.css  form.css  header.css  index.css  setlang.css
lumino/shared/templates/: base.html  form.html  header.html  index.html  messages.html
lumino/shared/templatetags/: shared_extras.py
lumino/subjects/: admin.py  context_processors.py  converters.py  forms.py  models.py  tasks.py  urls.py  validators.py  views.py
lumino/subjects/migrations/: 0001_initial.py
lumino/subjects/templates/: certificate.html  deliver_certificate.html  enrollment_form.html  lesson_detail.html  mark_form.html  mark_list.html  student_subjects.html  subject_detail.html  subjects.html  teacher_subjects.html
lumino/tests/: conftest.py  test_accounts.py  test_admin.py  test_context_processors.py  test_core.py  test_design.py  test_login_required.py  test_management_commands.py  test_shared.py  test_signals.py  test_subjects.py  test_users.py
lumino/users/: converters.py  models.py  signals.py  urls.py  views.py
lumino/users/migrations/: 0001_initial.py  0002_alter_profile_avatar.py
lumino/users/templates/: user_profile.html
(+26 files in other folders)
